Card Product Fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,28 @@
          </div>
       </div>
    </header>
-
+   <section id="card-product">
+      <div class="container cards">
+         <div class="card">
+            <img src="image/jumbotron.png" alt="WoodCraft 1" class="card-img1">
+            <h1>Original Phone Holder</h1>
+            <h2>$15</h2>
+            <a href="" class="card-button">Detail</a>
+         </div>
+         <div class="card">
+            <img src="image/2.png" alt="WoodCraft 1" class="card-img1">
+            <h1>Horse Phone Holder</h1>
+            <h2>$10</h2>
+            <a href="" class="card-button">Detail</a>
+         </div>
+         <div class="card tiga">
+            <img src="image/3.png" alt="WoodCraft 1" class="card-img1">
+            <h1>Deer Phone Holder</h1>
+            <h2>$15</h2>
+            <a href="" class="card-button">Detail</a>
+         </div>
+      </div>
+   </section>
    <footer>
       <div class="container">
          <div class="company">
