modal without js

--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
          </div>
       </div>
    </section>
+   <div class="modal" id="modal">
+      <div class="modal-header">
+         <i class="fas fa-times"></i>
+         <img src="image/2.png" alt="" >
+      </div>
+      <div class="modal-body">
+         <div class="description">
+            <span>Description</span>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sequi illum eius reprehenderit culpa velit error id fugit temporibus rem at sint iusto nobis repellendus earum laudantium quod, alias veritatis?
+         </div>
+         <div class="add-to-cart">
+            <input type="text" name="quantity" id="quantity" autofocus>
+            <div class="cart">
+               Add to cart
+               <i class="fas fa-shopping-cart"></i>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div id="overlay"></div>
    <footer>
       <div class="container">
          <div class="company">
