notification card cartNumber fixed

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 </head>
 <body>
    <header>
-      <div class="container">
          <nav>
             <h1>WoodCraft</h1>
             <div class="menu-toggle">
+               <div class="circle">
+                  0
+               </div>
                <i class="fas fa-shopping-cart"></i>
-           </div>
+            </div>
          </nav>
-      </div>
-      <div class="container">
-         <div class="jumbotron">
+      <div class="jumbotron">
+         <div class="container">
             <img src="image/3.png" alt="WoodCraft 1" class="jumbotron-img">
             <h1 class="jumbotron-h1">Welcome to WoodCraft</h1>
             <p class="jumbotron-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sequi porro labore quod</p>
@@ -30,23 +31,23 @@
    </header>
    <section id="card-product">
       <div class="container cards">
-         <div class="card">
+         <div class="card satu">
             <img src="image/1.png" alt="WoodCraft 1" class="card-img1">
             <h1>Original Phone Holder</h1>
             <h2>$15</h2>
-            <p class="card-button">Details</p>
+            <p class="card-button det1">Details</p>
          </div>
-         <div class="card">
+         <div class="card dua">
             <img src="image/2.png" alt="WoodCraft 1" class="card-img1">
             <h1>Horse Phone Holder</h1>
             <h2>$10</h2>
-            <p class="card-button">Details</p>
+            <p class="card-button det2">Details</p>
          </div>
          <div class="card tiga">
             <img src="image/3.png" alt="WoodCraft 1" class="card-img1">
             <h1>Deer Phone Holder</h1>
             <h2>$15</h2>
-            <p class="card-button">Details</p>
+            <p class="card-button det3">Details</p>
          </div>
       </div>
    </section>
