--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
 		/>
 		<!-- CSS -->
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
 		<header id="header">
@@ -107,8 +107,8 @@
             
 			</div>
 			<div class="cart-page-button">
-				<div class="checkout-button">Checkout</div>
-				<div class="delete-button">Delete</div>
+				<div class="checkout-button"><a href="./login/login.html">Checkout</a></div>
+				<div class="delete-button"><a href="./login/login.html">Delete</a></div>
 			</div>
       </div>
       
@@ -167,6 +167,6 @@
 			</div>
 		</footer>
 
-		<script src="script.js"></script>
+		<script type="module" src="./js/script.js"></script>
 	</body>
 </html>
